# multimodal-research-assistant

./: .env.example  .gitignore  LICENSE  LLM + RAG Application Project Plan (2026 Edition).md  Makefile  Multimodal Research Assistant — Complete Project Structure & Build Guide.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
agents/: graph.py  state.py
agents/memory/: conversation.py
agents/nodes/: escalation_node.py  generator_node.py  grader_node.py  reflection_node.py  retriever_node.py  rewrite_node.py  router.py  web_search_node.py
agents/tools/: sql_tool.py  web_search.py
agents/workflows/: ab_testing.py  deep_research.py
api/: admin_routes.py  cache.py  dependencies.py  main.py  routes.py
config/: settings.py
eval/: ab_report.py  ci_gate.py  run_eval.py
eval/golden_dataset/: adversarial.jsonl  generate_synthetic.py  questions.jsonl
eval/metrics/: retrieval_metrics.py
generation/: generator.py  llm_client.py  schemas.py
generation/prompts/: grader.txt  reflection.txt  registry.py  system_grounded.txt
guardrails/: input_scanner.py  output_scanner.py
ingestion/: pipeline.py
observability/: middleware.py  tracer.py
outline/: Multimodal Research Assistant — Core Implementation (Phases 2–7).md  Multimodal Research Assistant — Final Implementation (UI, Multimodal, Cache, Observability, Infra).md  Multimodal Research Assistant — Phase 9 & Production Hardening (GraphRAG, Fine-tuning, Multi-Agent, A_B, Gaps).md
scripts/: export_langfuse_dataset.py  finetune_unsloth.py
ui/: app.py  index.html  script.js  style.css
(+30 files in other folders)
