[project]
name = "multimodal-research-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "qdrant-client>=1.9",
    "FlagEmbedding>=1.2.10",          # bge-m3 + bge-reranker-v2
    "docling>=2.0",
    "langgraph>=0.2",
    "anthropic>=0.34",
    "openai>=1.35",
    "google-genai>=1.5.0",
    "httpx>=0.27",
    "redis>=5.0",
    "langfuse>=2.36",
    "tenacity>=8.3",
    "python-jose[cryptography]>=3.3",
    "sse-starlette>=2.1",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
eval = ["ragas>=0.1.10", "deepeval>=0.21", "datasets>=2.19"]
dev = ["ruff>=0.4", "mypy>=1.10", "pytest>=8.2", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
multimodal = [
    "colpali-engine>=0.3.4",
    "torch>=2.3",
    "pypdfium2>=4.30",
    "pillow>=10.3",
    "faster-whisper>=1.0",
]
graph = ["networkx>=3.3"]
finetune = [
    "sentence-transformers>=3.0",
    "peft>=0.11",
    "datasets>=2.19",
    "accelerate>=0.30",
]
tools = ["tavily-python>=0.3", "asyncpg>=0.29"]
ui = ["streamlit>=1.35"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "config*", "eval*", "generation*", "guardrails*", "infra*", "ingestion*", "observability*", "retrieval*", "scripts*", "ui*"]
